Now supports persona, but it took a lot of prompt engineering to get there!